--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
 
-    <div class="login">
-
+    <div class="login padding-mockup">
         <ul class="nav justify-content-end pt-2 ">
             <li class="nav-item">
                 <a class="active" href="#">Sign up</a>
@@ -28,10 +27,63 @@
                 <a href="#" tabindex="-1" aria-disabled="true">Archived News </a>
             </li>
         </ul>
-
-
     </div>
 
+    <nav class="navbar padding-mockup sticky-top">
+        <p class="nav-bar-title">Revelation</p>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">HOMEPAGE</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">STYLE DEMO</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">FULL WIDTH</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">GALLERY</a>
+            </li>
+
+        </ul>
+    </nav>
+
+    <section class="contaniner-fluid container-tv padding-mockup pt-4">
+
+        <div class="row">
+
+        <div class="col">
+            <div class="tv">
+                <div class="tv-inside">
+                    
+
+                </div>
+            </div>
+            <div class="tv-base">
+
+            </div>
+
+        </div>
+        <div class="col">
+            <div>
+                <h1>A CHACHY TITLE</h1>
+            <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore possimus culpa commodi tenetur velit
+                veritatis consequuntur sunt repellat ad aut.</p>
+            <button type="button" class="btn">READ MORE >></button>
+
+
+            </div>
+            
+        </div>
+
+
+        </div>
+
+
+    </section>
 
 
 
