adding sections cards part two

--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
                 <img src="assets/icon1.png" class="img-card">
                 <h1 class="card-title">Vivasmulero Auger</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo quam consectetur, adipisci nisi pariatur?</p>
+                <p class="parrafo-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo quam consectetur, adipisci nisi pariatur?</p>
             </div>
             <div class="col">
                 <img src="assets/icon2.png" class="img-card">
                 <h1 class="card-title">Vivasmulero Auger</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo quam consectetur, adipisci nisi pariatur?</p>
+                <p class="parrafo-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo quam consectetur, adipisci nisi pariatur?</p>
             </div>
             <div class="col">
                 <img src="assets/icon3.png" class="img-card">
                 <h1 class="card-title">Vivasmulero Auger</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo quam consectetur, adipisci nisi pariatur?</p>
+                <p class="parrafo-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo quam consectetur, adipisci nisi pariatur?</p>
             </div>
             <div class="col">
                 <img src="assets/icon4.png" class="img-card">
                 <h1 class="card-title">Vivasmulero Auger</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo quam consectetur, adipisci nisi pariatur?</p>
+                <p class="parrafo-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quo quam consectetur, adipisci nisi pariatur?</p>
             </div>
         </div>
 
@@ -107,6 +107,35 @@
     </section>
 
 
+    <section class="container-fluid padding-mockup container-cards-img">
+        <div class="row">
+            <div class="col">
+                <h1 class="card-title-2">Indonectetus facilis</h1>
+                <img src="assets/anna-field.jpeg" class="img-card-2 pt-2">
+                <p class="parrafo-card-2  mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, nihil!</p>
+                <button type="button">Read more >></button>
+            </div>
+            <div class="col">
+                <h1 class="card-title-2">Indonectetus facilis</h1>
+                <img src="assets/mellow-yellow.jpeg" class="img-card-2 pt-2">
+                <p class="parrafo-card-2  mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, nihil!</p>
+                <button type="button" >Read more >></button>
+            </div>
+            <div class="col">
+                <h1 class="card-title-2">Indonectetus facilis</h1>
+                <img src="assets/cassedeo.jpeg" class="img-card-2 pt-2">
+                <p class="parrafo-card-2  mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, nihil!</p>
+                <button type="button">Read more >></button>
+            </div>
+            <div class="col">
+                <h1 class="card-title-2">Indonectetus facilis</h1>
+                <img src="assets/prada.jpeg" class="img-card-2 pt-2">
+                <p class="parrafo-card-2 mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, nihil!</p>
+                <button type="button">Read more >></button>
+            </div>
+            
+        </div>
+    </section>
 
 
 
