adding footer part one

--- a/index.html
+++ b/index.html
@@ -137,6 +137,52 @@
         </div>
     </section>
 
+    <footer class="padding-mockup footer">
+
+        <div class="row">
+            <div class="col lastest-from-blog">
+                <h2 class="footer-title">Lastest from Blog</h2>
+                <h3>Post Title</h3>
+                <h4>Friday, 6th April 2000</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque temporibus asperiores sapiente amet expedita assumenda id. Aliquid quia delectus adipisci quibusdam accusantium quas vero provident!</p>
+            </div>
+            <div class="col link-block">
+                <h2 class="footer-title">Link Block</h2>
+                <ul>
+                    <li> Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li> 
+                </ul>
+
+            </div>
+            <div class="col company-details">
+                <h2 class="footer-title">Company Details</h2>
+
+                <p>Company Name <br> Street Name and Number <br> Line two <br> Town <br> Postcode/Zip </p>
+                <p>Tel: xxxxx <br> Fax: xxxxxxx <br> Email: companyemail@mail.com</p>
+
+            </div>
+            <div class="col newsletter">
+                <h2 class="footer-title">Newsletter</h2>
+
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Email">
+                <button type="button" class="btn"> Submit</button>
+
+            </div>
+        </div>
+
+        <div class="copyright">
+            <p>
+                Copyright © 2013 Domain Name - All Rights Reserved
+            </p>
+
+        </div>
+    </footer>
 
 
 
